2012-09-05  Andreas Schwab  <schwab@linux-m68k.org>

	* stdlib/tst-strtod-overflow.c (TIMEOUT): Define.

2012-09-05  Allan McRae  <allan@archlinux.org>

	[BS #13966]
	* configure.in (CXX_SYSINCLUDES): Use compiler output to
	determine header location.
	* configure: Regenerated.

2012-09-05  Andreas Schwab  <schwab@linux-m68k.org>

	* stdlib/gen-tst-strtod-round.c (formats): Add Motorola extended
	float format.
	* stdlib/tst-strtod-round.c (TEST) [LDBL_MANT_DIG == 64 &&
	LDBL_MAX_EXP == 16384]: Add case for Motorola extended float
	format.
	(test): Regenerate.

2012-09-04  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/addmul_1.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/submul_1.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/mul_1.S: New file.

2012-09-04  Florian Weimer  <fweimer@redhat.com>

	* stdlib/tst-secure-getenv.c (alternative_main): Only warn on SGID
	failures.

	* stdlib/tst-secure-getenv.c: Fix whitespace in comments.

2012-09-04  Joseph Myers  <joseph@codesourcery.com>

	[BZ #9914]
	* libio/iogetdelim.c: Include <limits.h>.
	(_IO_getdelim): Avoid integer overflow in testing whether cur_len
	+ len + 1 would overflow.

2012-09-03  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/fpu/libm-test-ulps: Update.
	* sysdeps/i386/fpu/libm-test-ulps: Update.

2012-09-03  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/i386/i686/fpu/multiarch/Makefile (sysdep_routines):
	Add s_sinf-sse2, s_conf-sse2.

	* sysdeps/i386/i686/fpu/multiarch/s_sinf-sse2.S: New file.
	* sysdeps/i386/i686/fpu/multiarch/s_cosf-sse2.S: New file.
	* sysdeps/i386/i686/fpu/multiarch/s_sinf.c: New file.
	* sysdeps/i386/i686/fpu/multiarch/s_cosf.c: New file.

	* sysdeps/ieee754/flt-32/s_sinf.c (SINF, SINF_FUNC): Add macros
	for using routine as __sinf_ia32.
	Use macro for function declaration and weak_alias.
	* sysdeps/ieee754/flt-32/s_cosf.c (COSF, COSF_FUNC): Add macros
	for using routine as __cosf_ia32.
	Use macro for function declaration and weak_alias.
